# bandicoot-code

./: .gitlab-ci.yml  CMakeLists.txt  NOTICE.txt  README.md  docs.html
benchmarks/: Makefile  accu.cpp  chol.cpp  copy.cpp  create-plots.py  dot.cpp  eig_sym.cpp  fill.cpp  lu.cpp  matmul.cpp  matvec.cpp  randn.cpp  randu.cpp  run-benchmarks.sh  submat_copy.cpp  svd.cpp  trans.cpp
cmake_aux/InstallFiles/: BandicootConfig.cmake.in  BandicootConfigVersion.cmake.in
cmake_aux/Modules/: COOT_FindCLBLAS.cmake
examples/: README.md  example1.cpp
include/: bandicoot
include/bandicoot_bits/: Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  Glue_bones.hpp  Glue_meat.hpp  MatValProxy_bones.hpp  MatValProxy_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  Op_bones.hpp  Op_meat.hpp  Row_bones.hpp  Row_meat.hpp  SizeMat_bones.hpp  SizeMat_meat.hpp  SizeProxy.hpp  access.hpp  arma_forward.hpp  arrayops_bones.hpp  arrayops_meat.hpp  cache_bones.hpp  cache_meat.hpp  compiler_check.hpp  compiler_setup.hpp  compiler_setup_post.hpp  cond_rel_bones.hpp  cond_rel_meat.hpp  config.hpp  config.hpp.cmake  constants.hpp  coot_cmath.hpp  coot_config.hpp  coot_forward.hpp  coot_init.hpp  coot_ostream_bones.hpp  coot_ostream_meat.hpp  coot_rng_bones.hpp  coot_rng_meat.hpp  coot_rt_bones.hpp  (+209 more)
include/bandicoot_bits/cuda/: .gemm.hpp.swp  .gemv.hpp.swp  .inplace_op.hpp.swp  accu.hpp  all.hpp  any.hpp  array_op.hpp  chol.hpp  clamp.hpp  copy.hpp  copy_bones.hpp  copy_meat.hpp  cross.hpp  debug.hpp  def_cublas.hpp  def_cusolver.hpp  det.hpp  (+49 more)
junk/: TODO.txt
misc/: bandicoot.pc.in
src/: README.txt  wrapper_blas.cpp  wrapper_blas_hidden_args.cpp  wrapper_clblas.cpp  wrapper_cublas.cpp  wrapper_cuda.cpp  wrapper_curand.cpp  wrapper_cusolver.cpp  wrapper_lapack.cpp  wrapper_lapack_hidden_args.cpp  wrapper_nvrtc.cpp  wrapper_opencl.cpp
tests/: CMakeLists.txt  Makefile  accu.cpp  all.cpp  any.cpp  chol.cpp  clamp.cpp  col.cpp  conv.cpp  conv2.cpp  conv_to.cpp  cor.cpp  cov.cpp  cross.cpp  det.cpp  diag.cpp  dot.cpp  eig_sym.cpp  eop_scalar.cpp  eye.cpp  find.cpp  find_finite.cpp  find_nan.cpp  find_nonfinite.cpp  gebrd.cpp  gelqf.cpp  geqrf.cpp  geqrf2.cpp  gesvd.cpp  initfill.cpp  join_cols.cpp  join_rows.cpp  larfb.cpp  larfg.cpp  linspace.cpp  lu.cpp  main.cpp  mat.cpp  mat_operators.cpp  matmul.cpp  (+38 more)
tests/magma/: .gitignore  Makefile  README.md  def_lapack_test.hpp  dgeqlf.hpp  gebrd.cpp  gelqf.cpp  geqrf.cpp  gesvd.cpp  getrf.cpp  larfb.cpp  main.cpp  orgbr.cpp  orglq.cpp  orgqr.cpp  ormbr.cpp  ormlq.cpp  ormql2.cpp  ormqr.cpp  ormqr2.cpp  sgeqlf.hpp  syevd.cpp  sytrd2.cpp  translate_lapack_test.hpp
tests/old_tests/: zeros.cpp
(+662 files in other folders)
